--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "@types/json-schema": "^7.0.3",
     "@types/loader-utils": "^1.1.3",
     "@types/node": "^12.12.8",
-    "@types/node-sass": "^4.11.0",
+    "@types/sass": "^1.16.0",
     "@types/terser-webpack-plugin": "^2.2.0",
     "@types/webpack": "^4.39.9",
     "@types/yargs": "^13.0.3",
@@ -87,12 +87,11 @@
     "fs-extra": "^8.1.0",
     "lines-unlines": "^1.0.0",
     "loader-utils": "^1.2.3",
-    "node-sass": "^4.13.1",
-    "node-sass-utils": "^1.1.2",
+    "node-sass-utils": "^1.1.3",
     "raw-loader": "^4.0.0",
     "restrict-imports-loader": "^3.2.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "10.1.1",
     "schema-utils": "^2.5.0",
     "terser-webpack-plugin": "^2.3.1",
     "to-string-loader": "^1.1.6",
