--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "sideEffects": false,
   "jest": {
+    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
@@ -80,17 +81,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "26.0.24",
+    "@types/jest": "27.5.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.33.0",
     "cli-confirm": "^1.0.1",
     "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "26.6.3",
+    "jest": "27.5.1",
     "renamer": "^1.1.4",
     "repository-check-dirty": "^1.0.2",
     "rimraf": "5.0.7",
-    "ts-jest": "26.5.6",
+    "ts-jest": "27.1.5",
     "ts-preferences": "^2.0.0",
     "typescript": "4.4.4"
   },
